Add CSS for colors and fonts and over-ride Bootstrap theme

--- a/source/stylesheets/components/_banner.scss
+++ b/source/stylesheets/components/_banner.scss
@@ -7,16 +7,16 @@
   align-items: center;
   justify-content: center;
   background-size: cover;
-}
 
-.banner h1 {
-  font-size: 50px;
-  font-weight: bold;
-}
+  h1 {
+    font-size: 50px;
+    font-weight: bold;
+  }
 
-.banner p {
-  font-size: 25px;
-  margin-bottom: 70px;
+  p {
+    font-size: 25px;
+    margin-bottom: 70px;
+  }
 }
 /*
 .banner-content {
