--- a/source/_navbar.html.erb
+++ b/source/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar-wagon">
   <!-- Logo -->
   <% link_to "/", class: "navbar-wagon-brand" do %>
-    <%= image_tag "lewagon.png" %>
+  <%= image_tag "lewagon.png" %>
   <% end %>
 
   <!-- Right Navigation -->
@@ -16,44 +16,49 @@
     </form>
 
     <!-- Text link -->
-    <a href="https://www.lewagon.com" class="navbar-wagon-item navbar-wagon-link">Wagon</a>
+    <%= link_to "Wagon", "https://www.lewagon.com", class: "navbar-wagon-item navbar-wagon-link" %>
+    <!-- <a href="https://www.lewagon.com" class="navbar-wagon-item navbar-wagon-link">Wagon</a> -->
 
     <!-- Text link -->
-    <a href="" class="navbar-wagon-item navbar-wagon-link">Team</a>
+    <%= link_to "Team", "https://www.lewagon.com", class: "navbar-wagon-item navbar-wagon-link" %>
+    <!-- <a href="" class="navbar-wagon-item navbar-wagon-link">Team</a> -->
 
     <!-- Notification link-->
-    <a href="" class="navbar-wagon-item navbar-wagon-link">
-      <div class="badge-container">
-        <i class="fa fa-envelope-o"></i>
-        <div class="badge badge-blue">3</div>
-      </div>
-    </a>
-
-    <!-- Profile picture and dropdown -->
-    <div class="navbar-wagon-item">
-      <div class="dropdown">
-        <img src="https://placehold.it/50x50" class="avatar dropdown-toggle" id="navbar-wagon-menu" data-toggle="dropdown">
-        <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-          <li><a href="#">Profile</a></li>
-          <li><a href="#">Dashboard</a></li>
-          <li><a href="#">Log Out</a></li>
-        </ul>
-      </div>
+    <%= link_to "", "", class: "navbar-wagon-item navbar-wagon-link" %>
+    <!-- <a href="" class="navbar-wagon-item navbar-wagon-link"> -->
+    <div class="badge-container">
+      <i class="fa fa-envelope-o"></i>
+      <div class="badge badge-blue">3</div>
     </div>
+  </a>
 
-    <!-- Button (call-to-action) -->
-    <a href="" class="navbar-wagon-item navbar-wagon-button btn">Post stuff</a>
-  </div>
-
-  <!-- Dropdown appearing on mobile only -->
-  <div class="navbar-wagon-item hidden-md hidden-lg">
+  <!-- Profile picture and dropdown -->
+  <div class="navbar-wagon-item">
     <div class="dropdown">
-      <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
+      <%= image_tag "https://placehold.it/50x50", id: "navbar-wagon-menu", class: "avatar dropdown-toggle", data: {toggle: "dropdown"} %>
+      <!-- <img src="https://placehold.it/50x50" class="avatar dropdown-toggle" id="navbar-wagon-menu" data-toggle="dropdown"> -->
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li><a href="#">Some mobile link</a></li>
-        <li><a href="#">Other one</a></li>
-        <li><a href="#">Other one</a></li>
+        <li><%= link_to "Profile", "#", class: "" %></li>
+        <li><%= link_to "Dashboard", "#", class: "" %></li>
+        <li><%= link_to "Log out", "#", class: "" %></li>
       </ul>
     </div>
   </div>
+
+  <!-- Button (call-to-action) -->
+  <%= link_to "Post stuff", "#", class: "navbar-wagon-item navbar-wagon-button btn" %>
+  <!-- <a href="" class="navbar-wagon-item navbar-wagon-button btn">Post stuff</a> -->
+</div>
+
+<!-- Dropdown appearing on mobile only -->
+<div class="navbar-wagon-item hidden-md hidden-lg">
+  <div class="dropdown">
+    <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
+    <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
+      <li><%= link_to "Some mobile link", "#", class: "" %></li>
+      <li><%= link_to "Other one", "#", class: "" %></li>
+      <li><%= link_to "Other one", "#", class: "" %></li>
+    </ul>
+  </div>
+</div>
 </div>
