--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -14,7 +14,8 @@ title: Le Wagon Middleman boilerplate
       <h1>WELCOME HOME</h1>
       <p>Rent unique places to stay from local hosts in 190+ countries.
       </p>
-      <a class="btn btn-primary btn-lg">How it works</a>
+      <%= link_to "How it works", "#", class: "btn btn-primary btn-lg" %>
+      <!-- <a class="btn btn-primary btn-lg">How it works</a> -->
     </div>
   </div>
   <div class="text-center padded features">
