--- a/source/stylesheets/config/_variables.css.scss
+++ b/source/stylesheets/config/_variables.css.scss
@@ -2,9 +2,9 @@
  * Fonts
  * ------------------------------------- */
 // Google fonts
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500");
-$base-font: "Open Sans", "Helvetica", "sans-serif";
-$header-font: "Raleway", "Helvetica", "sans-serif";
+@import url("https://fonts.googleapis.com/css?family=Roboto:400|Raleway:400,100,300,700,500");
+$base-font: "Roboto", "sans-serif";
+$header-font: "Lato", "sans-serif";
 
 // Local fonts (uncomment following lines)
 // @font-face {
@@ -26,11 +26,11 @@ $base-height: 1.4;
 // Scheme
 $brand-color: #D23333;
 
-$red: #EE5F5B;
-$blue: #469AE0;
-$yellow: #FDB631;
+$red: #FF331F;
+$blue: #6369D1;
+$yellow: #CACC90;
 $orange: #E67E22;
-$green: #32B796;
+$green: #9BC53D;
 
 // Gray scale
 $gray-darker:  lighten(#000, 13.5%); // #222
