--- a/source/stylesheets/layout/_navbar.css.scss
+++ b/source/stylesheets/layout/_navbar.css.scss
@@ -8,6 +8,10 @@
   padding: 0px 30px;
   align-items: center;
   justify-content: space-between;
+
+  &-brand img {
+  width: 50px;
+  }
 }
 
 /* Optional class to fix the navbar on top */
@@ -20,9 +24,7 @@
 }
 
 /* Navbar logo */
-.navbar-wagon-brand img {
-  width: 50px;
-}
+
 
 /* Navbar right section (with form, links, button) */
 .navbar-wagon-right {
@@ -40,11 +42,11 @@
 
 /* Navbar standard link */
 .navbar-wagon-link {
-  color: #616668;
+  color: $blue;
   font-size: 14px;
 }
 .navbar-wagon-link:hover {
-  color: #da552f;
+  color: $green;
   text-decoration: none;
 }
 
@@ -75,7 +77,7 @@
 }
 .navbar-wagon-search-btn {
   line-height: 40px;
-  color: #E6E6E6;
+  color: $yellow;
   border: none;
   background: transparent;
   position: absolute;
